--- a/.github/workflows/reset-db-on-contract-change.yml
+++ b/.github/workflows/reset-db-on-contract-change.yml
@@ -73,31 +73,7 @@ jobs:
           npx prisma generate
           
           # Clear all data from tables (preserves schema)
-          node -e "
-            const { PrismaClient } = require('@prisma/client');
-            const prisma = new PrismaClient();
-            
-            async function clearData() {
-              try {
-                console.log('Clearing all sources...');
-                await prisma.source.deleteMany({});
-                console.log('Sources cleared successfully');
-                
-                console.log('Clearing all questions...');
-                await prisma.question.deleteMany({});
-                console.log('Questions cleared successfully');
-                
-                console.log('Database data cleared successfully');
-              } catch (error) {
-                console.error('Error clearing database:', error);
-                process.exit(1);
-              } finally {
-                await prisma.\$disconnect();
-              }
-            }
-            
-            clearData();
-          "
+          node scripts/clear-database.js
           
           echo "Database data cleared successfully"
 
