--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.84.2",
+    "@vercel/speed-insights": "^1.2.0",
     "ethers": "^6.15.0",
     "next": "15.4.2",
     "prisma": "^6.13.0",
